--- a/Home.css
+++ b/Home.css
@@ -1,8 +1,7 @@
-.title{
+h1{
     font-family:Garamond, serif ;
     font-size: 30px;
     text-align: center;
-    margin-top: 1%;
     font-weight: 400;
 }
 
@@ -10,11 +9,46 @@ p{
     text-align: center;
     color: grey;
     font-weight: 200;
-    line-height: 1%;
+}
+
+#story{
+font-size: 17px;
+text-align: center;
+color: grey;
+font-weight: 200;
 }
 
 .border{
-border-top: solid;
-border-top-width: 0.1px;
-margin-top: 3%;
+border-style: solid;
+border-left: 0;
+border-right: 0;
+border-width: 0.1px;
+padding: auto;
+margin: 50px;
+}
+
+.flex{
+    display: flex;
+    flex-direction: row;
+}
+
+.center{
+    display:flex;
+    justify-content: center;
+}
+
+.grid{
+    display: grid;
+    background-color: white;
+    padding: 10px;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+}
+
+.gridi{
+    background-color: rgb(51, 2, 2);
+    border: 1px solid rgb(75, 33, 33);
+    font-size: 20px;
+    text-align: center;
+    color: rgb(190, 183, 183);
 }
