--- a/Home.css
+++ b/Home.css
@@ -30,6 +30,7 @@ margin: 50px;
 .flex{
     display: flex;
     flex-direction: row;
+    margin: 40px;
 }
 
 .center{
@@ -46,9 +47,26 @@ margin: 50px;
 }
 
 .gridi{
-    background-color: rgb(51, 2, 2);
-    border: 1px solid rgb(75, 33, 33);
+    background-color: antiquewhite;
+    border: 1px solid rgb(74, 72, 72);
     font-size: 20px;
     text-align: center;
-    color: rgb(190, 183, 183);
+    color: black;
+}
+
+.flexform{
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+}
+
+.table{
+    border-style: solid;
+    background-color: antiquewhite;
+    border-color: black;
+}
+
+th{
+    border-collapse: collapse;
+    border: 2px solid;
 }
