--- a/Home.css
+++ b/Home.css
@@ -5,6 +5,15 @@ h1{
     font-weight: 400;
 }
 
+.sticky{
+    position: sticky;
+    top: 0px;
+    padding: 5px;
+    background-color: antiquewhite;
+    border: 2px solid;
+    text-align: center;
+}
+
 p{
     text-align: center;
     color: grey;
